--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,10 +8,12 @@ androidx-activityCompose = "1.8.0"
 kotlinxCoroutinesCore = "1.10.1"
 kotlinxCoroutinesCoreIos = "1.6.0"
 kotlinxCoroutinesCoreVersion = "1.6.0"
+kotlinxUuidCore = "0.0.5"
 lifecycleViewmodelAndroid = "2.8.7"
 composeMaterial = "1.4.1"
 material3 = "1.3.1"
 uiTooling = "1.5.0"
+identityJvm = "202411.1"
 
 [libraries]
 androidx-foundation-v178 = { module = "androidx.compose.foundation:foundation", version.ref = "foundation" }
@@ -29,6 +31,8 @@ androidx-lifecycle-viewmodel-android = { group = "androidx.lifecycle", name = "l
 androidx-compose-material = { group = "androidx.wear.compose", name = "compose-material", version.ref = "composeMaterial" }
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinxCoroutinesCore" }
 kotlinx-coroutines-core-v160 = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinxCoroutinesCoreVersion" }
+identity-jvm = { group = "com.android.identity", name = "identity-jvm", version.ref = "identityJvm" }
+kotlinx-uuid-core = { module = "org.jetbrains.kotlinx:kotlinx-uuid-core", version.ref = "kotlinxUuidCore" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
