--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,6 +19,8 @@ composeMaterial = "1.4.1"
 material3 = "1.3.1"
 uiTooling = "1.5.0"
 identityJvm = "202411.1"
+navigationCompose = "2.8.9"
+materialIconsCoreAndroid = "1.6.0"
 
 [libraries]
 androidx-foundation-v178 = { module = "androidx.compose.foundation:foundation", version.ref = "foundation" }
@@ -45,6 +47,8 @@ kotlinx-coroutines-core-v160 = { module = "org.jetbrains.kotlinx:kotlinx-corouti
 identity-jvm = { group = "com.android.identity", name = "identity-jvm", version.ref = "identityJvm" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
 kotlinx-uuid-core = { module = "org.jetbrains.kotlinx:kotlinx-uuid-core", version.ref = "kotlinxUuidCore" }
+androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
+androidx-material-icons-core-android = { group = "androidx.compose.material", name = "material-icons-core-android", version.ref = "materialIconsCoreAndroid" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
