--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,11 +12,15 @@ androidx-activityCompose = "1.8.0"
 kotlinxCoroutinesCore = "1.10.1"
 kotlinxCoroutinesCoreIos = "1.6.0"
 kotlinxCoroutinesCoreVersion = "1.6.0"
+kotlinxCoroutinesTest = "1.7.3"
 kotlinxSerializationJson = "1.5.1"
 kotlinxUuidCore = "0.0.5"
 lifecycleViewmodelAndroid = "2.8.7"
 composeMaterial = "1.4.1"
 material3 = "1.3.1"
+mockative = "1.13.0"
+mockk = "1.13.7"
+turbine = "1.0.0"
 uiTooling = "1.5.0"
 identityJvm = "202411.1"
 navigationCompose = "2.8.9"
@@ -45,10 +49,14 @@ androidx-compose-material = { group = "androidx.wear.compose", name = "compose-m
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinxCoroutinesCore" }
 kotlinx-coroutines-core-v160 = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinxCoroutinesCoreVersion" }
 identity-jvm = { group = "com.android.identity", name = "identity-jvm", version.ref = "identityJvm" }
+kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinxCoroutinesTest" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
 kotlinx-uuid-core = { module = "org.jetbrains.kotlinx:kotlinx-uuid-core", version.ref = "kotlinxUuidCore" }
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
 androidx-material-icons-core-android = { group = "androidx.compose.material", name = "material-icons-core-android", version.ref = "materialIconsCoreAndroid" }
+mockative = { module = "io.mockative:mockative", version.ref = "mockative" }
+mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
+turbine = { module = "app.cash.turbine:turbine", version.ref = "turbine" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
