--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,6 +25,7 @@ uiTooling = "1.5.0"
 identityJvm = "202411.1"
 navigationCompose = "2.8.9"
 materialIconsCoreAndroid = "1.6.0"
+skie = "0.10.2"
 
 [libraries]
 androidx-foundation-v178 = { module = "androidx.compose.foundation:foundation", version.ref = "foundation" }
@@ -57,6 +58,7 @@ androidx-material-icons-core-android = { group = "androidx.compose.material", na
 mockative = { module = "io.mockative:mockative", version.ref = "mockative" }
 mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
 turbine = { module = "app.cash.turbine:turbine", version.ref = "turbine" }
+skie-annotations = { module = "co.touchlab.skie:configuration-annotations", version.ref = "skie" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
@@ -65,3 +67,4 @@ kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 kotlinCocoapods = { id = "org.jetbrains.kotlin.native.cocoapods", version.ref = "kotlin" }
 compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+skie = { id = "co.touchlab.skie", version.ref = "skie" }
